# omlang

./: .gitignore  CMakeLists.txt  README.md  TODO  gcc.txt
examples/: main.om  test.om
include/: AST.h  Env.h  config.h  cxxopts.hpp  driver.h  lexer.h  parser.h  utils.h
libom/include/: std.om
libom/src/: libom.c  std.om
src/: AST.cpp  Env.cpp  driver.cpp  lexer.cpp  main.cpp  parser.cpp  utils.cpp
test/: ort0.asm  t.txt
